add auditlog to rest endpoints